mostly fixed chart selection, however first chart is still not showing up after clicking through the other charts. Also fixed issue of line graph overflowing out of its container

--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,7 @@ input[type="search"]{
 .widget-container-full, .widget-container-half{
     width: 95vw;
     height: 20vh;
+    position: relative;
 }
 #daily h3, .user-devices h3{
     margin-left: .5em;
@@ -718,6 +719,7 @@ input[type="search"]{
      .widget-container-full{
          height: 45vh;
      }
+
      
      .social-image{
          /* width: 25%; */
